--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,14 @@
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
+  font-size: 3.5rem;
 }
 /* write your parent styles in here for your App.js */
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  color: white;
+  width: 100%;
+  border: 3px solid #443e3e;
+}
